syntax = "proto3";

package bs.types;
option go_package="go_game/protodefine/mytype";

enum CMDKindId{
    NullType = 0;

    IDKindLogger = 8;
    IDKindNetTCP = 9;
    IDKindRouter = 10;
    IDKindAppFrame = 11;	///App之间交互的一些通用报文，简化设计
    	IDKindGate = 12;		///对应gate.proto
    	IDKindClient = 13;		///客户端类
    	IDKindMatchClient = 14;	///match客户端类
    	IDKindMCMS = 15;		/// mc与ms之间的交互
    	IDKindTableLogic = 16;	/// mp与TableLogic之间的交互
    	IDKindFund = 17;		//财富类
    	IDKindHallClient = 18;	//大厅客户端类
    	IDKindMatchPhase = 19;	//比赛过程大类
    	IDKindRankList = 20;	//比赛排名大类
    	IDKindList = 21;
    	IDKindMatchDB = 22;

    	IDKindPrivateInternal = 0x100;	// 内部私有
    	IDKindGameStart = 0x120;		// 开始具体游戏
    	IDLast = 0x0FFE;				//最后一个4095

};

enum EnumAppId{
    UnKnowId = 0;
    Send2All = 1;
    Send2AnyOne = 2;
};

enum EnumAppType{
    UnknowType = 0;
    Gate = 5;
    Router = 6;
    Login = 7;
    Online = 8;				//在线管理
    	Fund = 9;				//财富
    	List = 10;				//列表

    	FreeMatch = 12;			//
    	Match = 13;				//
    	TableLogic = 14;		//
    	MatchPhase = 15;		//
    	RankList = 16;			//

    	MatchDB = 18;			//

    	Conect_To_Gold = 19;	//

    	Tool = 0xE0;			//工具
    	Last = 0xFE;			//
};

message BaseInfo{
    uint32 kind_id = 1;
    uint32 sub_id = 2;
    uint64 conn_id = 3;
    uint64 gate_conn_id = 4;
    string remote_add = 5;
    uint32 att_apptype = 6;
    uint32 att_appid = 7;
};

//
//基础用户信息
//
message BaseUserInfo {

	enum UserType{
		UNKNOW = 0;	//未知
		Normal = 1;	//正常类型

		Robot=10;	//机器人
	};
	uint64	user_id =1;         //用户ID
	uint64	game_id=2;			//数字ID
	uint32	gender=3;			//性别
	uint32	face_id=7;			//头像id
	string	custom_face=8;		//自定义的图像地址
	string	nick_name=9;		//昵称

	uint32	manager_right=10;	//管理权限
	uint32	user_right=11;		//用户权限
	UserType user_type=12;		//用户类别
}

//
//用户当前连接信息
//
message  UserSessionInfo{
	uint32 gate_id=1;			//来自哪个gate
	uint64 gate_conn_id =2;		//gate 相关连接
	string client_IP = 9;		//客户端的IP
};


// 财富类型项
message FundItem{
	uint32 id= 2;
	uint64 count=3;
	string name=4;

};

